# shurium

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SECURITY.md
docs/: ARCHITECTURE.md  COMMANDS.md  COMPARISON.md  DEPLOYMENT_GUIDE.md  FOR_INVESTORS.md  FOR_MINERS.md  MINING_GUIDE.md  QUICK_START.md  STAKING_GUIDE.md  TROUBLESHOOTING.md  UBI_EXPLAINED.md  UBI_SYSTEM.md  WALLET_GUIDE.md  WHITEPAPER.md
include/shurium/chain/: blockindex.h  chainstate.h  coins.h
include/shurium/consensus/: checkpoints.h  params.h  validation.h
include/shurium/core/: block.h  hex.h  merkle.h  random.h  script.h  serialize.h  transaction.h  types.h
include/shurium/crypto/: aes.h  field.h  hmac.h  keys.h  poseidon.h  ripemd160.h  secp256k1.h  sha256.h
include/shurium/db/: blockdb.h  database.h  leveldb.h  utxodb.h
include/shurium/economics/: funds.h  oracle.h  reward.h  stability.h  treasury.h  ubi.h
include/shurium/governance/: governance.h
include/shurium/identity/: commitment.h  identity.h  nullifier.h  rangeproof.h  sigma.h  zkproof.h
include/shurium/marketplace/: marketplace.h  problem.h  solution.h  verifier.h
include/shurium/mempool/: mempool.h
include/shurium/miner/: blockassembler.h  miner.h
include/shurium/network/: address.h  addrman.h  connection.h  dnsseed.h  message_processor.h  network_manager.h  peer.h  protocol.h  sync.h
include/shurium/node/: context.h
include/shurium/rpc/: client.h  commands.h  server.h
include/shurium/script/: interpreter.h
include/shurium/staking/: staking.h
include/shurium/util/: config.h  fs.h  logging.h  threadpool.h  time.h
include/shurium/wallet/: coinselection.h  hdkey.h  keystore.h  wallet.h
mobile/shurium-wallet/: .gitignore  App.tsx  README.md  app.json  index.js  package.json  tsconfig.json
mobile/shurium-wallet/src/navigation/: AppNavigation.tsx
mobile/shurium-wallet/src/screens/: FaucetScreen.tsx  HomeScreen.tsx  ReceiveScreen.tsx  SendScreen.tsx  SettingsScreen.tsx  StakingScreen.tsx  TransactionsScreen.tsx  UBIScreen.tsx
mobile/shurium-wallet/src/services/: rpc.ts
mobile/shurium-wallet/src/store/: wallet.ts
mobile/shurium-wallet/src/types/: index.ts
mobile/shurium-wallet/src/utils/: crypto.ts
src/: genesis-miner.cpp  shurium-cli.cpp  shurium-wallet.cpp  shuriumd.cpp
src/chain/: blockindex.cpp  chainstate.cpp  coins.cpp
src/consensus/: chain.cpp  checkpoints.cpp  params.cpp  pouw.cpp  validation.cpp
src/core/: block.cpp  hex.cpp  merkle.cpp  random.cpp  script.cpp  serialize.cpp  transaction.cpp  types.cpp
src/crypto/: aes.cpp  field.cpp  hmac.cpp  keys.cpp  poseidon.cpp  ripemd160.cpp  secp256k1.cpp  sha256.cpp
src/db/: blockdb.cpp  database.cpp  utxodb.cpp
src/economics/: funds.cpp  oracle.cpp  reward.cpp  stability.cpp  treasury.cpp  ubi.cpp
src/governance/: governance.cpp
src/identity/: commitment.cpp  identity.cpp  nullifier.cpp  rangeproof.cpp  sigma.cpp  zkproof.cpp
src/marketplace/: marketplace.cpp  problem.cpp  solution.cpp  verifier.cpp
src/mempool/: mempool.cpp
src/miner/: blockassembler.cpp  miner.cpp
src/network/: address.cpp  addrman.cpp  connection.cpp  dnsseed.cpp  message.cpp  message_processor.cpp  network_manager.cpp  peer.cpp  protocol.cpp  sync.cpp
src/node/: context.cpp
src/rpc/: client.cpp  commands.cpp  server.cpp
src/script/: interpreter.cpp
src/staking/: staking.cpp
src/util/: config.cpp  fs.cpp  logging.cpp  threadpool.cpp  time.cpp
src/wallet/: coinselection.cpp  hdkey.cpp  keystore.cpp  wallet.cpp
tests/: test_util.cpp
tests/chain/: test_chain.cpp
tests/consensus/: test_checkpoints.cpp  test_consensus.cpp  test_pouw.cpp
tests/core/: test_block.cpp  test_hex.cpp  test_merkle.cpp  test_random.cpp  test_script.cpp  test_serialize.cpp  test_transaction.cpp  test_types.cpp
tests/crypto/: test_keys.cpp  test_poseidon.cpp  test_ripemd160.cpp  test_sha256.cpp
tests/db/: test_db.cpp
tests/economics/: test_oracle.cpp  test_reward.cpp  test_stability.cpp  test_treasury.cpp  test_ubi.cpp
tests/governance/: test_governance.cpp
tests/identity/: test_identity.cpp  test_zkproof.cpp
tests/integration/: test_integration.cpp
tests/marketplace/: test_marketplace.cpp
tests/mempool/: test_mempool.cpp
tests/network/: test_dnsseed.cpp  test_network.cpp
tests/rpc/: test_rpc.cpp
tests/script/: test_interpreter.cpp
tests/staking/: test_staking.cpp
tests/util/: test_config.cpp  test_util.cpp
tests/wallet/: test_wallet.cpp
